--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -696,6 +696,7 @@ https://github.com/silviomoreto/bootstrap-select/issues/1135
     height: 128px;
 }
 
+/* Small and up */
 @media screen and (min-width: 576px) {
     .padding-sm-left-0 {
         padding-left: 0px !important;
@@ -706,6 +707,7 @@ https://github.com/silviomoreto/bootstrap-select/issues/1135
     }
 }
 
+/* Medium and up */
 @media screen and (min-width: 768px) {
     .padding-md-left-0 {
         padding-left: 0px !important;
@@ -716,8 +718,57 @@ https://github.com/silviomoreto/bootstrap-select/issues/1135
     }
 }
 
-.heroloader-container-herodata {
+/* Large and up */
+@media screen and (min-width: 992px) {
+    #average_stats {
+        display: block;
+    }
 
+    .padding-lg-left-0 {
+        padding-left: 0px !important;
+    }
+
+    .padding-lg-right-0 {
+        padding-right: 0px !important;
+    }
+}
+
+.heroloader-stats-key {
+    font-size: 14px;
+    color: #FFFFFF;
+    font-weight: 600;
+}
+
+.heroloader-stats-value {
+    font-size: 12px;
+    color: #FFFFFF;
+    font-weight: 500;
+}
+
+.heroloader-toggle {
+    width:24px!important;
+    height:24px!important;
+    padding: 0px 0px 0px 0px!important;
+    margin: 4px 4px 0px 4px!important;
+    border-style: none!important;
+    background: none;
+    color: #FFFFFF!important;
+    cursor: pointer!important;
+}
+
+.heroloader-toggle:after {
+    font-family: FontAwesome!important;
+    font-size: 24px!important;
+    content: "\f147"!important;
+}
+
+.heroloader-toggle.collapsed:after {
+    font-family: FontAwesome!important;
+    font-size: 24px!important;
+    content: "\f196"!important;
+}
+
+.heroloader-container-herodata {
 }
 
 .heroloader-container-stats {
