Explored sending ajax requests on select change, rather than on filter button press, will have to do more research for best way to do this without just spamming requests. Fixed prepare error in herodatacontroller for heropage by changing quotation type in sql statement.

--- a/app/Resources/views/default/hero.html.twig
+++ b/app/Resources/views/default/hero.html.twig
@@ -66,6 +66,12 @@
                                             {% elseif stat.type == 'kda' %}
                                                 <span data-toggle="tooltip"
                                                       title="{{ average_stats_tooltips['kda'] }}"><span id="hl-stats-{{ key }}-kda"></span></span>
+                                            {% elseif stat.type == 'raw' %}
+                                                <span data-toggle="tooltip"
+                                                      title="{{ stat.name }}"><span id="hl-stats-{{ key }}-raw"></span></span>
+                                            {% elseif stat.type == 'time-spent-dead' %}
+                                                <span data-toggle="tooltip"
+                                                      title="{{ stat.name ~ average_stats_tooltips['time-spent-dead'] }}"><span id="hl-stats-{{ key }}-time-spent-dead"></span></span>
                                             {% endif %}
                                         </div>
                                     </div>
