Added manipulation of window title and location to match the ajax requested hero. Moved name and title of here to be floating above image, added border to image, began inserting ad placements into design, added ability pane.

--- a/app/Resources/views/default/hero.html.twig
+++ b/app/Resources/views/default/hero.html.twig
@@ -79,6 +79,9 @@
                             </div>
                         {% endfor %}
                     {% endblock %}
+                    {% block advertising_horizontal_responsive_01 %}
+                        {% include ':snippets:advertising/responsive_horizontal.html.twig' %}
+                    {% endblock %}
                 {% endembed %}
             </div>
             <div class="col-md-1 col-xl-2">
