--- a/app/Resources/views/snippets/heroes/heroloader.html.twig
+++ b/app/Resources/views/snippets/heroes/heroloader.html.twig
@@ -14,17 +14,11 @@
                 <div class="col">
                     <div class="row">
                         <div class="col">
-                            <div class="dev-row-a"><img id="hl-herodata-image-hero" src=""></div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col">
-                            <div class="dev-row-b"><span id="hl-herodata-name">{NAME}</span></div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col">
-                            <div class="dev-row-a"><span id="hl-herodata-title">{TITLE}</span></div>
+                            <div class="dev-row-a text-center">
+                                <img id="hl-herodata-image-hero" src="">
+                                <span id="hl-herodata-name">{NAME}</span>
+                                <span id="hl-herodata-title">{TITLE}</span>
+                            </div>
                         </div>
                     </div>
                     <div class="row">
@@ -43,6 +37,11 @@
         <div class="col-sm-8 col-md-9 col-lg-6 padding-sm-left-0 padding-lg-right-0 heroloader-container-talents">
             <div class="row">
                 <div class="col">
+                    <div class="row">
+                        <div class="col">
+                            <div class="dev-row-b">Abilities</div>
+                        </div>
+                    </div>
                     <div class="row">
                         <div class="col">
                             <div class="dev-row-a">Talents</div>
@@ -81,6 +80,13 @@
     </div>
     <div class="row">
         <div class="col">
+            <div class="row">
+                <div class="col">
+                    <div class="text-center">
+                        {% block advertising_horizontal_responsive_01 %}{% endblock %}
+                    </div>
+                </div>
+            </div>
             <div class="row">
                 <div class="col">
                     <div class="dev-row-a">Graphs</div>
