Changed all filters to send ajax requests on dropdown close, rather than relying on a filter button, to streamline the user experience. Further tweaked a variety of hero page design. Added a loading indicator to all ajax requests on the hero page to visualize when a user's actions result in information being loaded.

--- a/app/Resources/views/snippets/heroes/heroloader.html.twig
+++ b/app/Resources/views/snippets/heroes/heroloader.html.twig
@@ -2,7 +2,7 @@
     <script src="{{ asset('build/hero-loader.js') }}"></script>
 {% endblock %}
 
-<div class="container-fluid hotstatus-container">
+<div id="heroloader-container" class="initial-load container-fluid hotstatus-container">
     <div class="row">
         <div class="col">
             {% block filter %}{% endblock %}
