Tweaked ad display design, added hotstatus advertising class to handle loading and unloading of ads to maintain responsiveness

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -21,5 +21,13 @@
         {% block body %}{% endblock %}
         {% include ':snippets:footer.html.twig' %}
         {% block javascripts %}{% endblock %}
+        <script>
+            $(document).ready(function() {
+                {% block tailJavascript %}{% endblock %}
+                if (Hotstatus.advertising.internal.generateByDefault) {
+                    Hotstatus.advertising.generateAdvertising();
+                }
+            });
+        </script>
     </body>
 </html>
