Added display of abilities to hero page

--- a/app/Resources/views/default/hero.html.twig
+++ b/app/Resources/views/default/hero.html.twig
@@ -12,6 +12,7 @@
 {# Inject dynamic content variables #}
 {% block dynamicVariables %}
     let average_stats = {{ average_stats | json_encode | raw}};
+    let image_base_path = "{{ asset('', 'images') | raw }}";
 {% endblock %}
 
 {# Custom styling that require the use of path generation #}
