--- a/app/Resources/views/snippets/heroes/heroloader.html.twig
+++ b/app/Resources/views/snippets/heroes/heroloader.html.twig
@@ -39,7 +39,9 @@
                 <div class="col">
                     <div class="row">
                         <div class="col">
-                            <div class="dev-row-b">Abilities</div>
+                            <div id="hl-abilities-container" class="dev-row-b text-center">
+
+                            </div>
                         </div>
                     </div>
                     <div class="row">
