--- a/app/Resources/views/snippets/heroes/filter/dropdown/select/dates.html.twig
+++ b/app/Resources/views/snippets/heroes/filter/dropdown/select/dates.html.twig
@@ -1,4 +1,4 @@
-<select class="selectpicker filter-selector filter-selector-date" data-width="180px" title="No Time Range"
+<select class="selectpicker filter-selector filter-selector-date" data-width="180px" title="No Range"
         data-max-options="1" data-max-options-text="Max 1 Time Range" multiple>
     {% for key, date in filter_dates %}
         <option {% if date.selected == true %}selected="selected"{% endif %}
