Finished constructing talent data, began loading data through hero loader on hero page

--- a/app/Resources/views/snippets/heroes/heroloader.html.twig
+++ b/app/Resources/views/snippets/heroes/heroloader.html.twig
@@ -39,14 +39,12 @@
                 <div class="col">
                     <div class="row">
                         <div class="col">
-                            <div id="hl-abilities-container" class="dev-row-b text-center">
-
-                            </div>
+                            <div id="hl-abilities-container" class="dev-row-b text-center">{# HEROLOADER GENERATED #}</div>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col">
-                            <div class="dev-row-a">Talents</div>
+                            <div id="hl-talents-container" class="dev-row-a">{# HEROLOADER GENERATED #}</div>
                         </div>
                     </div>
                     <div class="row">
