Refined use of datatables for displaying talents, fixed divide by zero errors for percent on ranges, improved styling of talent data

--- a/app/Resources/views/default/hero.html.twig
+++ b/app/Resources/views/default/hero.html.twig
@@ -30,8 +30,8 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-1 col-xl-2"></div>
-            <div class="col-sm-12 col-md-10 col-xl-8">
+            <div class="col-xl-2"></div>
+            <div class="col-sm-12 col-md-12 col-xl-8">
                 {% embed ':snippets:heroes/heroloader.html.twig' %}
                     {% block javascripts %}{% endblock %}
                     {% block filter %}
@@ -82,7 +82,7 @@
                     {% endblock %}
                 {% endembed %}
             </div>
-            <div class="col-md-1 col-xl-2">
+            <div class="col-xl-2">
                 {% include ':snippets:advertising/responsive_vertical.html.twig' %}
             </div>
         </div>
