--- a/app/Resources/views/snippets/heroes/heroloader.html.twig
+++ b/app/Resources/views/snippets/heroes/heroloader.html.twig
@@ -9,7 +9,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-sm-4 col-md-3 col-lg-3 padding-sm-right-0 heroloader-container-herodata">
+        <div class="col-sm-3 col-md-3 col-lg-3 padding-sm-right-0 heroloader-container-herodata">
             <div class="row">
                 <div class="col">
                     <div class="row">
@@ -31,10 +31,30 @@
                             <div class="dev-row-a"><span id="hl-herodata-desc-bio">{BIO}</span></div>
                         </div>
                     </div>
+                    <div class="row">
+                        <div class="col">
+                            <div class="dev-row-b">
+                                <a
+                                        data-toggle="collapse"
+                                        data-target="#average_stats"
+                                        class="heroloader-toggle d-lg-none collapsed"></a>
+                                Average Stats
+                            </div>
+                        </div>
+                    </div>
+                    <div id="average_stats" class="collapse">
+                        <div class="row">
+                            <div class="col">
+                                <div class="dev-row-a">
+                                    {% block group_average_stats %}{% endblock %}
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="col-sm-8 col-md-9 col-lg-6 padding-sm-left-0 padding-lg-right-0 heroloader-container-talents">
+        <div class="col-sm-9 col-md-9 col-lg-9 padding-sm-left-0 heroloader-container-talents">
             <div class="row">
                 <div class="col">
                     <div class="row">
@@ -50,28 +70,6 @@
                     <div class="row">
                         <div class="col">
                             <div class="dev-row-b">Talent Builds</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-lg-3 padding-lg-left-0 heroloader-container-stats">
-            <div class="row">
-                <div class="col">
-                    <div class="dev-row-b">
-                        <a
-                                data-toggle="collapse"
-                                data-target="#average_stats"
-                                class="heroloader-toggle d-lg-none collapsed"></a>
-                         Average Stats
-                    </div>
-                </div>
-            </div>
-            <div id="average_stats" class="collapse">
-                <div class="row">
-                    <div class="col">
-                        <div class="dev-row-a">
-                            {% block group_average_stats %}{% endblock %}
                         </div>
                     </div>
                 </div>
