Full styled talents datatable on hero page, moved desc tagline and bio from own rows to tooltip displayed on hover of hero image composite

--- a/app/Resources/views/snippets/heroes/heroloader.html.twig
+++ b/app/Resources/views/snippets/heroes/heroloader.html.twig
@@ -14,21 +14,7 @@
                 <div class="col">
                     <div class="row">
                         <div class="col">
-                            <div class="dev-row-a text-center">
-                                <img id="hl-herodata-image-hero" src="">
-                                <span id="hl-herodata-name">{NAME}</span>
-                                <span id="hl-herodata-title">{TITLE}</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col">
-                            <div class="dev-row-b"><span id="hl-herodata-desc-tagline">{TAGLINE}</span></div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col">
-                            <div class="dev-row-a"><span id="hl-herodata-desc-bio">{BIO}</span></div>
+                            <div id="hl-herodata-image-hero-composite-container" class="dev-row-b text-center">{# HEROLOADER GENERATED #}</div>
                         </div>
                     </div>
                     <div class="row">
@@ -64,7 +50,7 @@
                     </div>
                     <div class="row">
                         <div class="col">
-                            <div id="hl-talents-container" class="dev-row-a">{# HEROLOADER GENERATED #}</div>
+                            <div id="hl-talents-container" class="">{# HEROLOADER GENERATED #}</div>
                         </div>
                     </div>
                     <div class="row">
