--- a/app/Resources/views/snippets/heroes/heroloader.html.twig
+++ b/app/Resources/views/snippets/heroes/heroloader.html.twig
@@ -31,7 +31,7 @@
                     <div id="average_stats" class="collapse">
                         <div class="row">
                             <div class="col">
-                                <div class="dev-row-a">
+                                <div class="dev-row-b">
                                     {% block group_average_stats %}{% endblock %}
                                 </div>
                             </div>
